use bsc flags during resolution (#418)